--- a/src/main/vuejs/assets/scss/spec/components/pageContainer.scss
+++ b/src/main/vuejs/assets/scss/spec/components/pageContainer.scss
@@ -30,11 +30,11 @@
 // ---------------------------------------------------------
 
 .main-content {
-  padding: 20px;
+  // padding: 20px;
   min-height: calc(100vh - 61px);
 
   @include to($breakpoint-md) {
-    padding: 5px;
+    // padding: 5px;
     // padding: 85px 5px 5px;
   }
 }
