Added create diary option to diary selector.

--- a/src/main/vuejs/assets/scss/spec/components/diary.scss
+++ b/src/main/vuejs/assets/scss/spec/components/diary.scss
@@ -19,7 +19,7 @@ $bg-gradient: linear-gradient(to right bottom, #e96443, #904e95);
   }
 
   .diary-info {
-    text-transform: capitalize;
+    // text-transform: capitalize;
   }
 
   .diary-week {
